Fixed the login pane background not being tall enough when the window is too short

--- a/www/extra-css/i3-login-default.css
+++ b/www/extra-css/i3-login-default.css
@@ -8,7 +8,7 @@ body {
 .pane {
 	position:absolute;
 	top:0px;
-	height:100%;
+	min-height:100%;
 	
 	-webkit-box-sizing:border-box;
 	   -moz-box-sizing:border-box;
